# ocrd_tables

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ocrd-tool.json  pyproject.toml  requirements.txt
ocrd_tables/: cli.py  fusion.py  geometry.py  ocrd-tool.json  processor.py
