[project]
name = "ocrd-tables"
version = "0.1.0"
description = "OCR-D processor to fuse YOLO columns and textlines into table cells via DBSCAN"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["ocrd_tables"]
include-package-data = true

[tool.setuptools.package-data]
ocrd_tables = ["*.json", "ocrd-tool.json"]

[project.scripts]
ocrd-tables = "ocrd_tables.cli:ocrd_tables"